# micrograd_karpathy

./: LICENSE  Makefile  README.md  engine.py  graph_utils.py  micrograd.ipynb  milligrad.py  nn.py  pyproject.toml  requirements.txt  setup.py  utils.py
core/: engine.py
examples/: cali_housing.py  log_regression.py  multi_reg.py  train_mlp.py
nn/: activations.py  losses.py  nn.py
optim/: optim.py
tests/: testsuite.py
